WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
214426
REGRESSION (
r261874
): Typing near the bottom of a scrollable document causes the scroll position to jump
https://bugs.webkit.org/show_bug.cgi?id=214426
Summary
REGRESSION (r261874): Typing near the bottom of a scrollable document causes ...
Wenson Hsieh
Reported
2020-07-16 15:05:40 PDT
<
rdar://problem/65302701
>
Attachments
For EWS
(15.67 KB, patch)
2020-07-16 23:32 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
For EWS
(22.04 KB, patch)
2020-07-20 12:25 PDT
,
Wenson Hsieh
simon.fraser
: review+
Details
Formatted Diff
Diff
Patch for landing
(22.14 KB, patch)
2020-07-20 14:44 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2020-07-16 23:32:40 PDT
Comment hidden (obsolete)
Created
attachment 404539
[details]
For EWS
Wenson Hsieh
Comment 2
2020-07-20 12:25:26 PDT
Created
attachment 404741
[details]
For EWS
Simon Fraser (smfr)
Comment 3
2020-07-20 13:50:01 PDT
Comment on
attachment 404741
[details]
For EWS View in context:
https://bugs.webkit.org/attachment.cgi?id=404741&action=review
> Source/WebCore/ChangeLog:17 > + the content size of view changes; if we happen to be scrolled all the way to the bottom of the main frame, this
I'd like to see a mention of what triggers the layout that causes the content size to change.
Wenson Hsieh
Comment 4
2020-07-20 14:08:50 PDT
Comment on
attachment 404741
[details]
For EWS View in context:
https://bugs.webkit.org/attachment.cgi?id=404741&action=review
>> Source/WebCore/ChangeLog:17 >> + the content size of view changes; if we happen to be scrolled all the way to the bottom of the main frame, this > > I'd like to see a mention of what triggers the layout that causes the content size to change.
๐๐ป added this information to the ChangeLog. In this particular case, the layout happens right before we try and canonicalize under the constructor of VisiblePosition. However, itโs not always due to this; the content size may also change due to script (e.g. input event listeners) triggering layout (for instance, by asking for scrollHeight).
Wenson Hsieh
Comment 5
2020-07-20 14:44:34 PDT
Created
attachment 404759
[details]
Patch for landing
EWS
Comment 6
2020-07-20 15:54:03 PDT
Committed
r264627
: <
https://trac.webkit.org/changeset/264627
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 404759
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug